[package]
name = "earthdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
prettytable = "0.10.0"
polars = "0.15"
plotters = "0.4.0"